--- a/css/styles.css
+++ b/css/styles.css
@@ -10658,7 +10658,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-    outline-color: #a97ab3;
+    outline-color: #a6565f;
 }
 
 @media (min-width: 992px) {
