--- a/css/styles.css
+++ b/css/styles.css
@@ -10413,7 +10413,7 @@ button.bg-dark:focus {
 }
 
 a.text-primary:hover, a.text-primary:focus {
-    color: #57365e !important;
+    color: #424242 !important;
 }
 
 .text-secondary {
